# phiacta-mcp

./: README.md  package-lock.json  package.json  pyproject.toml  vitest.config.ts
.github/workflows/: publish.yml
src/: client.ts  discovery.ts  enrich.ts  handler.ts  index.ts  prompts.ts  register.ts  resources.ts
src/__tests__/: client.test.ts  discovery.test.ts  e2e.test.ts  enrich.test.ts  fixtures.ts  handler.test.ts  multipart.test.ts  pat.test.ts
src/phiacta_mcp/: __init__.py  server.py
